# webwise-blogging

./: .env  .gitignore  db.sqlite3  pyproject.toml  pytest.ini  requirements.txt
.ebextensions/: django.config
.github/workflows/: ci.yaml
base/: admin.py  apps.py  models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_profile.py  0003_delete_profile.py  0004_alter_user_email.py
base/tests/: test_user.py
blog/: admin.py  filters.py  models.py  paginations.py  permissions.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py  0003_alter_comment_options_rename_uuid_post_id_and_more.py  0004_alter_post_id.py  0005_profile.py  0006_alter_post_content_alter_profile_first_name_and_more.py  0007_alter_comment_post_alter_post_slug.py
blog/tests/: conftest.py  test_comment.py  test_post.py
blogging/: .env  settings.py  urls.py  views.py
likes/: models.py  permissions.py  serializers.py  urls.py  views.py
likes/migrations/: 0001_initial.py  0002_alter_like_object_id.py  0003_like_likes_like_content_5c134b_idx.py
likes/tests/: conftest.py  test_likes.py
tags/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
tags/migrations/: 0001_initial.py  0002_dummymodel.py  0003_alter_dummymodel_id_remove_taggeditem_tag_and_more.py  0004_remove_taggeditem_tag_taggeditem_tags.py
tags/tests/: conftest.py  test_tag.py  test_tagged_item.py
