[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Initialize the backend for my blogging project with Django"
authors = ["WongYC19 <ycfkjc@Hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
Django = "^4.1.5"
psycopg2 = "^2.9.5"
python-dotenv = "^0.21.0"
pillow = "^10.0.1"
djangorestframework = "^3.14.0"
drf-nested-routers = "^0.93.4"
djoser = "^2.1.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.0.2"}
drf-yasg = "^1.21.4"
gunicorn = "^20.1.0"
dj-database-url = "^1.2.0"
django-environ = "^0.9.0"
whitenoise = "^6.3.0"
django-filter = "^22.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-django = "^4.5.2"
pytest-watch = "^4.2.0"
model-bakery = "^1.9.0"
faker = "^16.4.0"
django-debug-toolbar = "^3.8.1"
pytest-cov = "^4.0.0"
awsebcli = "^3.20.3"
django-fake-model = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
